<resources>
    <string name="app_name">android-mvvm-template</string>
    <string name="app_logo_description">App Logo</string>
    <string name="txt_new_post_title">New Post</string>
    <string name="txt_my_profile_title">My Profile</string>
    <string name="txt_search_title">Search</string>
    <string name="txt_register">Don\'t have an account? Sign up here</string>
    <string name="txt_login">Already have an account? Login here</string>
    <string name="txt_restore_password">Forgot your password?</string>
    <string name="txt_manage_account_title">Manage Account</string>
    <string name="txt_update_profile_subtitle">Update Profile</string>
    <string name="txt_update_password_subtitle">Update Password</string>
    <string name="txt_language_subtitle">Language</string>
    <string name="txt_theme_subtitle">Theme</string>
    <string name="txt_update_profile_description">Update your account\'s profile information and email adress.</string>
    <string name="txt_update_password_description">Ensure your account is using a long, random password to stay secure.</string>
    <string name="txt_language_description">Select the language you want the app to display.</string>
    <string name="txt_theme_description">Choose between light or dark mode for the app interface.</string>
    <string name="txt_prefs_title">Preferences</string>
    <string name="edt_username">Username</string>
    <string name="edt_email">Email</string>
    <string name="edt_names">Names</string>
    <string name="edt_lastnames">Lastnames</string>
    <string name="edt_password">Password</string>
    <string name="edt_current_password">Current password</string>
    <string name="edt_new_password">New password</string>
    <string name="edt_confirm_new_password">Confirm new password</string>
    <string name="btn_save_changes">Save changes</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_delete_account">Delete account</string>
    <string name="btn_create_post">Create post</string>
    <string name="btn_login">Login</string>
    <string name="edt_confirm_password">Confirm password</string>
    <string name="btn_register">Register</string>
    <string name="edt_new_username">New username</string>
    <string name="edt_new_email">New email</string>
    <string name="edt_new_firstname">New first name</string>
    <string name="edt_new_lastname">New last name</string>
    <string name="iv_profile_picture_description">Profile picture of the user</string>
    <string name="edt_post_title">Title</string>
    <string name="edt_post_content">Content</string>
    <string name="btn_delete_post">Delete</string>
    <string name="btn_edit_post">Edit</string>
    <string name="txt_edit_post_title">Edit Post</string>
    <string name="edt_post_new_title">New title</string>
    <string name="edt_post_new_content">New content</string>
    <string name="btn_save_post">Save post</string>
    <string name="txt_test">Test</string>
    <string name="edt_search">Search</string>
    <string name="txt_admin_panel_title">Admin Panel</string>
</resources>