<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu.MenuActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="@+id/main">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnReturn"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginEnd="16dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:insetLeft="0dp"
            android:insetRight="0dp"
            android:backgroundTint="@android:color/transparent"
            app:icon="@drawable/arrow_back_ios_new"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/black"
            app:iconSize="32dp"
            app:cornerRadius="0dp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_manage_account_title"
            android:textSize="18sp"
            android:textColor="@color/black" />

    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="@id/main">
        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="32dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_update_profile_subtitle"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_update_profile_description"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/edt_new_username">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNewUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/edt_new_email">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNewEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/edt_new_firstname">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNewFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/edt_new_lastname">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNewLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUpdateProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                android:text="@string/btn_save_changes"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:backgroundTint="@color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/txt_update_password_subtitle"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_update_password_description"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/edt_current_password"
                app:endIconMode="password_toggle">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCurrentPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/edt_new_password"
                app:endIconMode="password_toggle">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/edt_confirm_new_password"
                app:endIconMode="password_toggle">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtConfirmNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUpdatePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                android:text="@string/btn_save_changes"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:backgroundTint="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="64dp"
                android:background="@color/black"
                android:alpha="0.8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                android:text="@string/btn_logout"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:backgroundTint="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDeleteAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                android:text="@string/btn_delete_account"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:backgroundTint="@android:color/holo_red_dark" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>