<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.AuthActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="@+id/main"
        app:layout_constraintBottom_toBottomOf="@+id/main">
        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="32dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edt_username"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusBottomEnd="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/edt_password"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusBottomEnd="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                android:text="@string/btn_login"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:backgroundTint="@color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtGoToRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/txt_register"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="center" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtGoToRestorePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/txt_restore_password"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="center" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>